--- a/artists.html
+++ b/artists.html
@@ -31,9 +31,9 @@
       <h2>RocBoi Quez</h2>
       <p>Atlanta-born hip-hop artist blending gritty realism with cosmic vision. First artist on BitAudioX, RocBoi Quez breaks sonic and cultural ground with digital monetization and BTC-exclusive drops.</p>
       <div class="artist-links">
-        <a href="https://open.spotify.com/artist/6YJ8z1aIjRfihH7CldhWcs" target="_blank">Spotify</a>
-        <a href="https://www.youtube.com/@RocBoiQuez" target="_blank">YouTube</a>
-        <a href="https://music.apple.com/us/artist/rocboi-quez/1689684060" target="_blank">Apple Music</a>
+        <a href="" target="_blank">Spotify</a>
+        <a href=https://open.spotify.com/artist/1BRagK24ccc9TBXDMP1KS6?si=IWaCzF-7TCuUbgB5a5T-IAhttps://www.youtube.com/@RocBoiQuez" target="_blank">YouTube</a>
+        <a href="https://music.apple.com/us/album/amore-single/1667585388" target="_blank">Apple Music</a>
         <a href="https://soundcloud.com/rocboiquez" target="_blank">SoundCloud</a>
         <a href="https://tidal.com/browse/artist/19708022?u" target="_blank">Tidal</a>
       </div>
