--- a/artists.html
+++ b/artists.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BitAudioX | Artists</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Artists | BitAudioX</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="header">
@@ -27,15 +27,20 @@
 
   <section class="artist-section">
     <div class="artist-card">
-      <img src="https://i.scdn.co/image/ab6761610000e5eb1234567890abcdef12345678" alt="RocBoi Quez" class="artist-photo">
+      <img src="https://i.ibb.co/bbSXXhK/rocboi-quez-profile.jpg" alt="RocBoi Quez" class="artist-photo">
       <h2>RocBoi Quez</h2>
-      <p>Atlanta-born hip-hop artist blending gritty realism with cosmic vision. First artist on BitAudioX, RocBoi Quez breaks sonic and cultural ground with digital monetization and BTC-exclusive drops.</p>
+      <p><strong>Genre:</strong> Hip-Hop / Trap / Conscious Rap</p>
+      <p>
+        RocBoi Quez is an Atlanta-born rapper and composer delivering gritty lyricism, unfiltered truth, and magnetic sound. With roots deep in the South’s hip-hop legacy and a futuristic mindset, RocBoi Quez blends cosmic vision with street realism. As the first official BitAudioX artist, he is pioneering blockchain-based music monetization and decentralized fan connection.
+      </p>
+      <p>
+        His latest single, <strong>“Summer of The Real” ft. Wiz Khalifa</strong>, distributed through Bentley Records, sets the tone for a new era of hip-hop elevation—raw, reflective, and ready for the global stage.
+      </p>
       <div class="artist-links">
-        <a href="" target="_blank">Spotify</a>
-        <a href=https://open.spotify.com/artist/1BRagK24ccc9TBXDMP1KS6?si=IWaCzF-7TCuUbgB5a5T-IAhttps://www.youtube.com/@RocBoiQuez" target="_blank">YouTube</a>
-        <a href="https://music.apple.com/us/album/amore-single/1667585388" target="_blank">Apple Music</a>
-        <a href="https://soundcloud.com/rocboiquez" target="_blank">SoundCloud</a>
-        <a href="https://tidal.com/browse/artist/19708022?u" target="_blank">Tidal</a>
+        <a href="https://open.spotify.com/artist/6YJ8z1aIjRfihH7CldhWcs" target="_blank">Spotify</a>
+        <a href="https://music.apple.com/us/artist/rocboi-quez/1689684060" target="_blank">Apple Music</a>
+        <a href="https://tidal.com/browse/artist/19708022?u" target="_blank">TIDAL</a>
+        <a href="https://www.youtube.com/@RocBoiQuez" target="_blank">YouTube</a>
       </div>
     </div>
   </section>
