--- a/artists.html
+++ b/artists.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Artists | BitAudioX</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header class="header">
@@ -12,31 +14,31 @@
     <nav class="nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="fans.html">Fan Interaction</a></li>
-        <li><a href="join.html">Join Now</a></li>
+        <li><a href="fans.html">Fans</a></li>
+        <li><a href="join.html">Join</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="hero">
-    <h1>Featured Artist</h1>
-    <p>Meet the pioneers of the BitAudioX movement.</p>
+  <section class="hero neon">
+    <h1>RocBoi Quez</h1>
+    <p>First Official BitAudioX Hip-Hop Artist | Crypto-Driven. Culture-Focused.</p>
   </section>
 
-  <section class="artist-section">
-    <div class="artist-card">
-      <img src="https://i.ibb.co/bbSXXhK/rocboi-quez-profile.jpg" alt="RocBoi Quez" class="artist-photo">
-      <h2>RocBoi Quez</h2>
-      <p><strong>Genre:</strong> Hip-Hop / Trap / Conscious Rap</p>
+  <section class="artist-glass-card">
+    <img src="https://i.ibb.co/bbSXXhK/rocboi-quez-profile.jpg" alt="RocBoi Quez" />
+    <div class="bio">
+      <h2>Summer of The Real ft. Wiz Khalifa</h2>
       <p>
-        RocBoi Quez is an Atlanta-born rapper and composer delivering gritty lyricism, unfiltered truth, and magnetic sound. With roots deep in the South’s hip-hop legacy and a futuristic mindset, RocBoi Quez blends cosmic vision with street realism. As the first official BitAudioX artist, he is pioneering blockchain-based music monetization and decentralized fan connection.
+        RocBoi Quez is the embodiment of Atlanta’s gritty truth and cosmic flow. With lyrical precision
+        and unshakable authenticity, he merges trap heritage with blockchain rebellion.
+        <br /><br />
+        As the first artist to join BitAudioX, his BTC-first releases unlock a future where artists 
+        truly own their music — and fans collect it as digital assets.
       </p>
-      <p>
-        His latest single, <strong>“Summer of The Real” ft. Wiz Khalifa</strong>, distributed through Bentley Records, sets the tone for a new era of hip-hop elevation—raw, reflective, and ready for the global stage.
-      </p>
-      <div class="artist-links">
+      <div class="links">
         <a href="https://open.spotify.com/artist/6YJ8z1aIjRfihH7CldhWcs" target="_blank">Spotify</a>
         <a href="https://music.apple.com/us/artist/rocboi-quez/1689684060" target="_blank">Apple Music</a>
         <a href="https://tidal.com/browse/artist/19708022?u" target="_blank">TIDAL</a>
@@ -45,7 +47,7 @@
   </section>
 
   <footer class="footer">
-    <p>&copy; 2025 BitAudioX. All rights reserved.</p>
+    <p>&copy; 2025 BitAudioX. Built for the Blockchain Generation.</p>
   </footer>
 </body>
 </html>
