--- a/artists.html
+++ b/artists.html
@@ -28,7 +28,7 @@
   </section>
 
   <section class="artist-glass-card">
-    <img src="BitAudio1/IMG_20250624_210514_787.webp" alt="RocBoi Quez" />
+    <img src="BitAudio1/IMG_20250624_210514_787.webp" alt="RocBoi Quez" class="artist-photo" />
     <div class="bio">
       <h2>Summer of The Real ft. Wiz Khalifa</h2>
       <p>
