--- a/artists.html
+++ b/artists.html
@@ -22,13 +22,15 @@
     </nav>
   </header>
 
-  <section class="hero neon">
+  <!-- Hero section with RocBoi Quez's image -->
+  <section class="hero neon artist-hero">
+    <img src="BitAudio1/IMG_20250624_210514_787.webp" alt="RocBoi Quez" class="artist-banner" />
     <h1>RocBoi Quez</h1>
     <p>First Official BitAudioX Hip-Hop Artist | Crypto-Driven. Culture-Focused.</p>
   </section>
 
+  <!-- Artist bio section -->
   <section class="artist-glass-card">
-    <img src="BitAudio1/IMG_20250624_210514_787.webp" alt="RocBoi Quez" class="artist-photo" />
     <div class="bio">
       <h2>Summer of The Real ft. Wiz Khalifa</h2>
       <p>
