--- a/artists.html
+++ b/artists.html
@@ -24,7 +24,7 @@
 
   <!-- Hero section with RocBoi Quez's image -->
   <section class="hero neon artist-hero">
-    <img src="BitAudio1/IMG_20250624_210514_787.webp" alt="RocBoi Quez" class="artist-banner" />
+    <img src="IMG_20250624_210514_787.webp" alt="RocBoi Quez" class="artist-banner" />
     <h1>RocBoi Quez</h1>
     <p>First Official BitAudioX Hip-Hop Artist | Crypto-Driven. Culture-Focused.</p>
   </section>
