--- a/artists.html
+++ b/artists.html
@@ -26,7 +26,7 @@
   <section class="artist-hero-section">
     <div class="artist-hero-bg">
       <div class="artist-img-wrapper">
-        <img src="BitAudio1/IMG_20250624_210514_787.webp" alt="RocBoi Quez" class="artist-hero-img" />
+        <img src="IMG_20250624_210514_787.webp" alt="RocBoi Quez" class="artist-hero-img" />
       </div>
       <div class="artist-hero-text">
         <h1>RocBoi Quez</h1>
