--- a/artists.html
+++ b/artists.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RocBoi Quez | BitAudioX</title>
+  <title>Artists | BitAudioX</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet" />
@@ -22,40 +22,29 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="artist-hero-section">
-    <div class="artist-hero-bg">
-      <div class="artist-img-wrapper">
-        <img src="IMG_20250624_210514_787.webp" alt="RocBoi Quez" class="artist-hero-img" />
-      </div>
-      <div class="artist-hero-text">
-        <h1>RocBoi Quez</h1>
-        <h3>First Artist Signed to BitAudioX</h3>
-        <p>Where grit meets digital gold. RocBoi Quez blends Atlanta’s heart with blockchain's future.</p>
-      </div>
-    </div>
+  <!-- Hero section with RocBoi Quez's image -->
+  <section class="hero neon artist-hero">
+    <img src="IMG_20250624_210514_787.webp" alt="RocBoi Quez" class="artist-banner" />
+    <h1>RocBoi Quez</h1>
+    <p>First Official BitAudioX Hip-Hop Artist | Crypto-Driven. Culture-Focused.</p>
   </section>
 
-  <!-- Bio Section -->
+  <!-- Artist bio section -->
   <section class="artist-glass-card">
     <div class="bio">
-      <h2>🔥 Latest Release: “Summer of The Real” ft. Wiz Khalifa</h2>
+      <h2>Summer of The Real ft. Wiz Khalifa</h2>
       <p>
-        RocBoi Quez is a force from Atlanta’s trenches with a mission to liberate music through technology.
-        His work captures the rawness of the streets, the consciousness of a revolutionary, and the 
-        polish of a digital-native mogul. He’s not just making music — he’s carving a crypto-powered empire.
+        RocBoi Quez is the embodiment of Atlanta’s gritty truth and cosmic flow. With lyrical precision
+        and unshakable authenticity, he merges trap heritage with blockchain rebellion.
+        <br /><br />
+        As the first artist to join BitAudioX, his BTC-first releases unlock a future where artists 
+        truly own their music — and fans collect it as digital assets.
       </p>
-      <p>
-        “Summer of The Real” sets the tone for the movement: Southern heat, spiritual currency, and
-        lyrical currency all wrapped into one. RocBoi isn’t chasing charts — he’s designing new systems.
-        💰 Pay in Bitcoin. 📡 Stream in high fidelity. 💎 Own it forever.
-      </p>
-    </div>
-
-    <div class="artist-cta">
-      <a href="https://open.spotify.com/artist/6YJ8z1aIjRfihH7CldhWcs" target="_blank">🎧 Spotify</a>
-      <a href="https://music.apple.com/us/artist/rocboi-quez/1689684060" target="_blank">🍏 Apple Music</a>
-      <a href="https://tidal.com/browse/artist/19708022?u" target="_blank">🌊 TIDAL</a>
+      <div class="links">
+        <a href="https://open.spotify.com/artist/6YJ8z1aIjRfihH7CldhWcs" target="_blank">Spotify</a>
+        <a href="https://music.apple.com/us/artist/rocboi-quez/1689684060" target="_blank">Apple Music</a>
+        <a href="https://tidal.com/browse/artist/19708022?u" target="_blank">TIDAL</a>
+      </div>
     </div>
   </section>
 
