--- a/artists.html
+++ b/artists.html
@@ -49,7 +49,7 @@
   </section>
 
   <footer class="footer">
-    <p>&copy; 2025 BitAudioX. Built for the Blockchain Generation.</p>
+    <p>&copy; 2025 BitAudioX. Built for the Blockchain Slattland Records Inc</p>
   </footer>
 </body>
 </html>
