--- a/artists.html
+++ b/artists.html
@@ -28,7 +28,12 @@
     <h1>RocBoi Quez</h1>
     <p>First Official BitAudioX Hip-Hop Artist | Crypto-Driven. Culture-Focused.</p>
   </section>
-
+<section class="eth-support">
+  <h3>🎧 Tip RocBoi Quez with Ethereum</h3>
+  <p>Send ETH to:</p>
+  <code class="eth-address">0x05e07bca157986544e5c41e90a34910d5d5e423b</code>
+  <p>Connected via MetaMask | EVM-Compatible</p>
+</section>
   <!-- Artist bio section -->
   <section class="artist-glass-card">
     <div class="bio">
