--- a/artists.html
+++ b/artists.html
@@ -33,7 +33,7 @@
   <p>Send ETH to:</p>
   <code class="eth-address">0x05e07bca157986544e5c41e90a34910d5d5e423b</code>
   <p>Connected via MetaMask | EVM-Compatible</p>
-</section>
+</section> <button id="connectWallet">🔗 Connect Wallet</button>
   <!-- Artist bio section -->
   <section class="artist-glass-card">
     <div class="bio">
